// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`List > should correspond default layout 1`] = `
<div>
  <div
    class=""
  />
</div>
`;

exports[`List > should support the "items" prop 1`] = `
<div>
  <div
    class=""
  />
</div>
`;

exports[`List > should support the "items" prop 2`] = `
<div>
  <div
    class=""
  >
    <span>
      1
    </span>
    <span>
      2
    </span>
    <span>
      3
    </span>
  </div>
</div>
`;

exports[`List > should support the "renderItem" prop 1`] = `
<div>
  <div
    class=""
  >
    <span>
      4
    </span>
    <span>
      5
    </span>
    <span>
      6
    </span>
  </div>
</div>
`;

exports[`List > should support the "renderItem" prop 2`] = `
<div>
  <div
    class=""
  >
    <span>
      3
    </span>
    <span>
      2
    </span>
    <span>
      1
    </span>
  </div>
</div>
`;
